--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,7 +13,7 @@
 <body>
 <div id="content">
   <header>
-    <a href="/"><img src="/img/zenchinese.png" class="logo"></a>
+    <a href="/">SolidariGif</a>
     <div id="login-toolbar">
       <% if current_user %>
         <a href="/logout">Logout</a>
