--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,7 +13,12 @@
 <body>
 <div id="content">
   <header>
-    <a href="/"><h1>SolidariGif</h1></a>
+    <% if current_user %>
+      <a href="/categories"><h1>SolidariGif</h1></a>
+    <% else %>
+      <a href="/"><h1>SolidariGif</h1></a>
+    <% end %>
+
     <div id="login-toolbar">
       <% if current_user %>
         <a href="/users/<%=current_user.id%>"><%=current_user.username%></a>
