--- a/app/views/auth/signup.erb
+++ b/app/views/auth/signup.erb
@@ -1,14 +1,17 @@
+<img class="logo" src="/fist.png" />
+<h1 class="headline">SolidariGif</h1>
+
 <div id="signup_form">
-  <form action="/signup" method="POST">
-    <input type="text" name="user[username]" placeholder="Username"><br>
-    <textarea name="user[about]" placeholder="About"></textarea>
+  <form class="login_signup" action="/signup" method="POST">
+    <input class="string" type="text" name="user[username]" placeholder="Username"><br>
+    <textarea class="string" name="user[about]" placeholder="About"></textarea>
     <br>
-    <input type="text" name="user[url]" placeholder="Image URL">
+    <input class="string" type="text" name="user[url]" placeholder="Image URL">
     <br>
-    <input type="password" name="user[password]" placeholder="Password">
+    <input class="string" type="password" name="user[password]" placeholder="Password">
     <br>
-    <input type="password" name="user[password_confirmation]" placeholder="Password Confirmation">
+    <input class="string" type="password" name="user[password_confirmation]" placeholder="Password Confirmation">
     <br>
-    <input type="submit">
+    <input class="btn" type="submit">
   </form>
 </div>
