--- a/app/views/comment/index.erb
+++ b/app/views/comment/index.erb
@@ -1,7 +1,7 @@
 <div class="comment_stuff">
-  <div class="leave_comment">
-    <a href="/gifs/<%= @gif_id %>/comments/new">Add a comment</a>
-  </div>
+<!--   <div class="leave_comment">
+    <a class="btn lil_button padding"href="/gifs/<%= @gif_id %>/comments/new">Add Comment</a>
+  </div> -->
 
   <div class="all_comments">
     <%@comments.each do |comment|%>
