--- a/app/views/auth/login.erb
+++ b/app/views/auth/login.erb
@@ -1,7 +1,10 @@
+<img class="logo" src="/fist.png" />
+<h1 class="headline">SolidariGif</h1>
+
 <div id="login_form">
-  <form action="/login" method="POST">
-    <input type="text" name="user[username]" placeholder="Username"><br>
-    <input type="password" name="user[password]" placeholder="Password">
-    <input type="submit">
+  <form class="login_signup" action="/login" method="POST">
+    <input class="string" type="text" name="user[username]" placeholder="Username"><br>
+    <input class="string" type="password" name="user[password]" placeholder="Password">
+    <input class="btn" type="submit">
   </form>
 </div>
