--- a/app/views/comment/new.erb
+++ b/app/views/comment/new.erb
@@ -1,8 +1,8 @@
 <div id="comment_new">
   <form action="/comments" method="POST">
-    <input type="hidden" name="comment[user_id]" value="<%= @user_id %>">
-    <input type="hidden" name="comment[gif_id]" value="<%= @gif_id %>">
-    <textarea name="comment[content]" placeholder="comment"></textarea>
+    <input class="string"type="hidden" name="comment[user_id]" value="<%= @user_id %>">
+    <input class="string"type="hidden" name="comment[gif_id]" value="<%= @gif_id %>">
+    <textarea class="string"name="comment[content]" placeholder="comment"></textarea>
     <br>
     <input type="submit">
   </form>
