--- a/app/views/gif/new.erb
+++ b/app/views/gif/new.erb
@@ -1,4 +1,5 @@
-<div class="padding_more" id="gif_new">
+<div class="stuff">
+<div id="gif_new">
   <form action="/gifs" method="POST">
     <input type="hidden" name="gif[user_id]" value="<%= @user_id %>">
     <input type="hidden" name="gif[category_id]" value="<%= @category_id %>">
@@ -9,4 +10,5 @@
     <br>
     <input class="btn" type="submit">
   </form>
+</div>
 </div>
