--- a/app/views/auth/login.erb
+++ b/app/views/auth/login.erb
@@ -5,6 +5,6 @@
   <form class="login_signup" action="/login" method="POST">
     <input class="string" type="text" name="user[username]" placeholder="Username"><br>
     <input class="string" type="password" name="user[password]" placeholder="Password">
-    <input class="btn" type="submit">
+    <input class="btn intro" type="submit">
   </form>
 </div>
